simplify/refactor Yanel configure scripts. see bug: http://bugzilla.wyona.com/cgi-bin/bugzilla/show_bug.cgi?id=6808 - thanks to guillaume.